2010-08-24  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/exdisp.h (get_RegisterAsBrowser): Fix typo.

	Thank you to cheznonnon for reporting the issue.

2010-08-24  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* lib/ws2_32.def: Regenerate using gendef on a Win7 machine.

2010-08-24  Ozkan Sezer  <sezero@users.sourceforge.net>

	* winnt.h: Fix several SUBLANG ID errors (ref:
	http://msdn.microsoft.com/en-us/library/dd318693(VS.85).aspx).
	(SUBLANG_UI_CUSTOM_DEFAULT): 0x05, not 0x03.
	(SUBLANG_HAUSA_NIGERIA): Bad ID name, correct one is ...
	(SUBLANG_HAUSA_NIGERIA_LATIN): ... this.
	(SUBLANG_INUKTITUT_CANADA_LATIN): 0x02, not 0x01.
	(SUBLANG_IRISH_IRELAND): 0x02, not 0x01.
	(SUBLANG_LAO_LAO_PDR): Bad ID name, correct one is ...
	(SUBLANG_LAO_LAO): ... this.
	(SUBLANG_LOWER_SORBIAN_GERMANY): 0x02, not 0x01.
	(SUBLANG_SAMI_SKOLT_FINLAND): 0x08, not 0x03.
	(SUBLANG_SAMI_INARI_FINLAND): 0x09, not 0x03.
	(SUBLANG_SYRIAC_SYRIA): define as SUBLANG_SYRIAC (what MSDN mentions).
	(SUBLANG_TIGRIGNA_ERITREA): 0x02, not 0x01.
	(SUBLANG_BENGALI_INDIA): 0x01, not 0x00.
	(SUBLANG_BENGALI_BANGLADESH): 0x02, not 0x01.
	(SUBLANG_PUNJABI_INDIA): 0x01, not 0x00.
	(SUBLANG_PUNJABI_PAKISTAN): not defined in MSDN.
	(SUBLANG_ROMANIAN_ROMANIA): 0x01, not 0x00.
	(SUBLANG_ROMANIAN_MOLDOVA): not defined in MSDN.

2010-08-24  LRN  <lrn1986@gmail.com>

	* include/mmreg.h (MPEGLAYER3WAVEFORMAT, WAVE_FORMAT_UNKNOWN,
	WAVE_FORMAT_PCM, WAVE_FORMAT_ADPCM, WAVE_FORMAT_IEEE_FLOAT,
	WAVE_FORMAT_VSELP, WAVE_FORMAT_IBM_CVSD, WAVE_FORMAT_ALAW,
	WAVE_FORMAT_MULAW, WAVE_FORMAT_OKI_ADPCM, WAVE_FORMAT_DVI_ADPCM,
	WAVE_FORMAT_MEDIASPACE_ADPCM, WAVE_FORMAT_SIERRA_ADPCM,
	WAVE_FORMAT_G723_ADPCM, WAVE_FORMAT_DIGIFIX, WAVE_FORMAT_DIALOGIC_OKI_ADPCM,
	WAVE_FORMAT_MEDIAVISION_ADPCM, WAVE_FORMAT_CU_CODEC,
	WAVE_FORMAT_YAMAHA_ADPCM, WAVE_FORMAT_SONARC,
	WAVE_FORMAT_DSPGROUP_TRUESPEECH, WAVE_FORMAT_ECHOSC1,
	WAVE_FORMAT_AUDIOFILE_AF36, WAVE_FORMAT_APTX, WAVE_FORMAT_AUDIOFILE_AF10,